Fixed bug #41291 (FastCGI does not set SO_REUSEADDR). (fmajid at kefta dot com)